# eas-rel-2026.1.0

.github/: CODEOWNERS
.github/workflows/: fedaero.yaml
education-ai-suite/smart-classroom/: config.yaml  start-smart-classroom.ps1
education-ai-suite/smart-classroom/content_search/: requirements.txt
federal-aerospace/apps/handheld-multi-modal/: AGENTS.md
federal-aerospace/docs/user-guide/: hmm.md  index.md  os.md  release-notes.md
health-and-life-sciences-ai-suite/NICU-Warmer/configs/: model-config.yaml
manufacturing-ai-suite/: README.md
manufacturing-ai-suite/hmi-augmented-worker/tests/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: .env  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-multimodal/helm/: values.yaml
manufacturing-ai-suite/industrial-edge-insights-time-series/: third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/helm/: README.md
manufacturing-ai-suite/industrial-edge-insights-vision/: README.md
metro-ai-suite/: README.md
metro-ai-suite/metro-vision-ai-app-recipe/: README.md
metro-ai-suite/sensor-fusion-for-traffic-management/: third_party_programs.txt
metro-ai-suite/smart-route-planning-agent/src/: Dockerfile  pyproject.toml
metro-ai-suite/smart-route-planning-agent/src/utils/: map_creator.py
metro-ai-suite/video-processing-for-nvr/: README.md
robotics-ai-suite/: .gitattributes  README.md
robotics-ai-suite/docs/: troubleshooting.md
robotics-ai-suite/scripts/: setup-robotics-humble.sh  setup-robotics-jazzy.sh
(+291 files in other folders)
